crates/typecheck/tests/fixtures/errors/unknown_method.ax
struct Circle { radius: Float }
fn main() { val c = Circle { radius: 1.0 } c.area() }
